<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/app/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_m"
        tools:context=".ui.DriverDashboardActivity">

        <!-- Header section -->
        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/space_m"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Live max speed"
                android:textSize="16sp"
                android:textColor="@color/color_on_surface" />

        </LinearLayout>

        <!-- Big number display -->

        <!-- Parameters card -->

        <!-- Weather section -->

        <TextView
            android:id="@+id/textMaxSpeed"
            android:layout_width="373dp"
            android:layout_height="102dp"
            android:text="-- km/h"
            android:textColor="@color/color_primary"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            tools:layout_editor_absoluteX="-9dp"
            tools:layout_editor_absoluteY="38dp" />

        <LinearLayout
            android:id="@+id/layoutParameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="@dimen/space_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textMaxSpeed"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="436dp">

            <!-- Road Type Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_s"
                android:text="@string/road_type"
                android:textColor="@color/color_on_surface"
                android:textSize="@dimen/text_body"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioRoadType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_m"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioAsphalt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/asphalt" />

                <RadioButton
                    android:id="@+id/radioGravel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gravel" />

            </RadioGroup>

            <!-- Time of Day Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_s"
                android:text="@string/time_of_day"
                android:textColor="@color/color_on_surface"
                android:textSize="@dimen/text_body"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioTimeOfDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day" />

                <RadioButton
                    android:id="@+id/radioNight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/night" />

            </RadioGroup>

        </LinearLayout>

        <!-- Recalculate button -->
        <LinearLayout
            android:id="@+id/layoutWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="@dimen/space_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutParameters"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="281dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_s"
                android:text="@string/weather"
                android:textColor="@color/color_on_surface"
                android:textSize="@dimen/text_body"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_s"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-- °C"
                    android:textSize="@dimen/text_body" />

                <TextView
                    android:id="@+id/textPrecipitation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-- mm"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>

            <Switch
                android:id="@+id/switchOfflineWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/offline_weather" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonRecalculate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/recalculate"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutWeather"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="208dp" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_dashboard_title"
            android:textAppearance="@style/TextAppearance.Fleet.Title"
            android:textColor="@color/color_primary"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
